--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,3 +37,19 @@
     args:
       warn: false
     when: not unzipdir.stat.exists 
+
+  - name: Override last mvn repo if the additional repository are defined
+    lineinfile:
+      dest: '{{ unzip_dest_dir }}/fuse-karaf-{{ fuse_version }}/etc/org.ops4j.pax.url.mvn.cfg'
+      line: '    https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess, \'
+      regexp: 'https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess'
+
+  - name: Add additional mvn repos
+    lineinfile:
+      dest: '{{ unzip_dest_dir }}/fuse-karaf-{{ fuse_version }}/etc/org.ops4j.pax.url.mvn.cfg'
+      line: "{{ item }}"
+      insertafter: 'https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess,*'
+      state: present
+    with_items:
+      - '{{ additional_maven_repositories }}'
+    when: additional_maven_repositories is defined
