--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,7 +38,7 @@
       warn: false
     when: not unzipdir.stat.exists 
 
-  - name: Override last mvn repo if the additional repository are defined
+  - name: Override last mvn repo if the additional repositories are defined
     lineinfile:
       dest: '{{ unzip_dest_dir }}/fuse-karaf-{{ fuse_version }}/etc/org.ops4j.pax.url.mvn.cfg'
       line: '    https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess, \'
