--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,6 +43,7 @@
       dest: '{{ unzip_dest_dir }}/fuse-karaf-{{ fuse_version }}/etc/org.ops4j.pax.url.mvn.cfg'
       line: '    https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess, \'
       regexp: 'https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess'
+    when: additional_maven_repositories is defined
 
   - name: Add additional mvn repos
     lineinfile:
