--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,16 @@
       name: unzip
       state: latest
 
+  - name: Ansible check Fuse 7 kit exists.
+    stat:
+      path: "{{ path_dir }}/{{ fuse_version }}.zip"
+    register: fuse_kit_details
+
+  - debug:
+      msg: "The {{ path_dir }}/{{ fuse_version }}.zip doesn't exist"
+    when: not fuse_kit_details.stat.exists
+    failed_when: 
+
   - name: Ansible check directory exists.
     stat:
       path: "{{ unzip_dest_dir }}"
@@ -37,6 +47,16 @@
       dest: '{{ unzip_dest_dir }}/{{ fuse_version }}/etc/org.ops4j.pax.url.mvn.cfg'
       line: '    https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess, \'
       regexp: 'https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess'
+    when: additional_maven_repositories is defined
+
+  - name: Add additional mvn repos
+    lineinfile:
+      dest: '{{ unzip_dest_dir }}/{{ fuse_version }}/etc/org.ops4j.pax.url.mvn.cfg'
+      line: "{{ item }}"
+      insertafter: 'https://repository.jboss.org/nexus/content/groups/ea@id=fuseearlyaccess,*'
+      state: present
+    with_items:
+      - '{{ additional_maven_repositories }}'
     when: additional_maven_repositories is defined
 
   - name: Override karaf.clean.all option if specified
